Bug 2013120 - Position .dialogStack relatively to the browser element it applies to. r=sfoster,devtools-reviewers,desktop-theme-reviewers,tabbrowser-reviewers,emilio,jdescottes,sclements.
We set browser element with opened dialog an anchor, and use it to position
position the .dialogStack element so it doesn't overlap the DevTools toolbox.

Differential Revision: https://phabricator.services.mozilla.com/D282594

--- a/browser/themes/shared/tabbrowser/content-area.css
+++ b/browser/themes/shared/tabbrowser/content-area.css
@@ -113,6 +113,7 @@
 .browserSidebarContainer {
   position: absolute;
   inset: 0;
+  anchor-scope: --browser-with-dialog;
 }
 
 .sidebar-browser-stack {
@@ -151,6 +152,9 @@
 
   browser[tabDialogShowing] {
     -moz-user-focus: none !important;
+    /* Used to position .dialogStack on top of this <browser> element so it doesn't overlap
+       the DevTools toolbox */
+    anchor-name: --browser-with-dialog;
   }
 
   .split-view-panel {
@@ -425,6 +429,12 @@ split-view-footer {
   z-index: var(--browser-stack-z-index-dialog-stack);
   position: absolute;
   inset: 0;
+  /* --browser-with-dialog set on browser[tabDialogShowing], we want to position the overlay
+     only on the top of the <browser> element so it doesn't overlap the DevTools toolbox */
+  position-anchor: --browser-with-dialog;
+  position-area: center;
+  width: 100%;
+  height: 100%;
 
   /* Hide tab-modal dialogs when a window-modal one is up. */
   :root[window-modal-open] .browserStack > &,
